--- a/starterOnly/index.html
+++ b/starterOnly/index.html
@@ -55,22 +55,27 @@
       <div class="content">
         <span class="close"></span>
         <div class="modal-body">
-          <form name="reserve" action="index.html" method="get" onsubmit="return validate();">
+          <form>
             <div class="formData">
               <label>Prénom</label><br>
-              <input class="text-control" type="text" id="first" name="first" minlength="2" /><br>
+              <input class="text-control" type="text" id="first" name="first" minlength="2" />
+              <br>
             </div>
             <div class="formData">
-              <label>Nom</label><br>
+              <label>Nom</label>
+              <br>
               <input class="text-control" type="text" id="last" name="last" /><br>
             </div>
             <div class="formData">
-              <label>E-mail</label><br>
+              <label>E-mail</label>
+              <br>
               <input class="text-control" type="email" id="email" name="email" /><br>
             </div>
             <div class="formData">
-              <label>Date de naissance</label><br>
-              <input class="text-control" type="date" id="birthdate" name="birthdate" /><br>
+              <label>Date de naissance</label>
+              <br>
+              <input class="text-control" type="date" id="birthdate" name="birthdate" />
+              <br>
             </div>
             <div class="formData">
               <label>À combien de tournois GameOn avez-vous déjà participé ?</label><br>
@@ -118,7 +123,8 @@
               </label>
               <br>
             </div>
-            <input class="btn-submit" type="submit" class="button" value="C'est parti" />
+            <button type="submit" class="btn-submit button">C'est parti</button>
+            <!-- <input  class="button" value="C'est parti" class="btn-submit" /> -->
           </form>
         </div>
       </div>
