--- a/starterOnly/index.html
+++ b/starterOnly/index.html
@@ -57,19 +57,22 @@
         <div class="modal-body">
           <form>
             <div class="formData">
-              <label>Prénom</label><br>
-              <input class="text-control" type="text" id="first" name="first" minlength="2" />
+              <label>Prénom</label>
+              <br>
+              <input class="text-control" type="text" id="first" name="first" required />
               <br>
             </div>
             <div class="formData">
               <label>Nom</label>
               <br>
-              <input class="text-control" type="text" id="last" name="last" /><br>
+              <input class="text-control" type="text" id="last" name="last" required />
+              <br>
             </div>
             <div class="formData">
               <label>E-mail</label>
               <br>
-              <input class="text-control" type="email" id="email" name="email" /><br>
+              <input class="text-control" type="email" id="email" name="email" />
+              <br>
             </div>
             <div class="formData">
               <label>Date de naissance</label>
