--- a/starterOnly/index.html
+++ b/starterOnly/index.html
@@ -13,7 +13,7 @@
 <body>
   <div class="topnav" id="myTopnav">
     <div class="header-logo">
-      <img alt="logo" src="./assets/img/Logo.png" width="auto" height="auto" />
+      <img alt="logo" src="./assets/img/Logo.png" />
     </div>
     <div class="main-navbar">
 
@@ -27,7 +27,7 @@
       </a>
     </div>
   </div>
-  </div>
+
   <main>
     <div class="hero-section">
       <div class="hero-content">
@@ -56,6 +56,7 @@
         <span class="close"></span>
         <div class="modal-body">
           <form>
+            <!-- input text -->
             <div class="formData">
               <label>Prénom</label>
               <br>
@@ -82,9 +83,10 @@
             </div>
             <div class="formData">
               <label>À combien de tournois GameOn avez-vous déjà participé ?</label><br>
-              <input type="number" class="text-control" id="quantity" name="quantity" min="0" max="99">
+              <input type="number" class="text-control" id="quantity" name="quantity" min="0" max="99" required>
             </div>
             <p class="text-label">A quel tournoi souhaitez-vous participer cette année ?</p>
+            <!-- input radio -->
             <div class="formData">
               <input class="checkbox-input" type="radio" id="location1" name="location" value="New York" />
               <label class="checkbox-label" for="location1">
@@ -111,10 +113,10 @@
                 <span class="checkbox-icon"></span>
                 Portland</label>
             </div>
-
+            <!-- input checkbox -->
             <div class="formData">
-              <input class="checkbox-input" type="checkbox" id="checkbox1" checked />
-              <label class="checkbox2-label" for="checkbox1" required>
+              <input class="checkbox-input" type="checkbox" id="checkbox1" checked required />
+              <label class="checkbox2-label" for="checkbox1">
                 <span class="checkbox-icon"></span>
                 J'ai lu et accepté les conditions d'utilisation.
               </label>
