--- a/starterOnly/index.html
+++ b/starterOnly/index.html
@@ -115,7 +115,7 @@
             </div>
             <!-- input checkbox -->
             <div class="formData">
-              <input class="checkbox-input" type="checkbox" id="checkbox1" checked required />
+              <input class="checkbox-input" type="checkbox" id="checkbox1" checked />
               <label class="checkbox2-label" for="checkbox1">
                 <span class="checkbox-icon"></span>
                 J'ai lu et accepté les conditions d'utilisation.
@@ -129,7 +129,7 @@
               <br>
             </div>
             <button type="submit" class="btn-submit button">C'est parti</button>
-            <!-- <input  class="button" value="C'est parti" class="btn-submit" /> -->
+
           </form>
         </div>
       </div>
