--- a/starterOnly/index.html
+++ b/starterOnly/index.html
@@ -39,9 +39,9 @@
           Vous aimez jouer ? Notre prochain évènement gaming est ouvert
           aux réservations... Places limitées !
         </p>
-        <!-- <button class="btn-signup modal-btn">
+        <button class="btn-signup modal-btn">
           je m'inscris
-        </button> -->
+        </button>
       </div>
       <div class="hero-img">
         <img src="./assets/img/bg_img.jpg" alt="img" />
