--- a/starterOnly/index.html
+++ b/starterOnly/index.html
@@ -78,7 +78,7 @@
             <div class="formData">
               <label>Date de naissance</label>
               <br>
-              <input class="text-control" type="date" id="birthdate" name="birthdate" />
+              <input class="text-control" type="date" id="birthdate" name="birthdate" required />
               <br>
             </div>
             <div class="formData">
