installation de webpack

--- a/starterOnly/index.html
+++ b/starterOnly/index.html
@@ -115,7 +115,7 @@
             </div>
             <!-- input checkbox -->
             <div class="formData">
-              <input class="checkbox-input" type="checkbox" id="checkbox1" />
+              <input class="checkbox-input" type="checkbox" id="checkbox1" name="checkbox1" />
               <label class="checkbox2-label" for="checkbox1" id="cgu">
                 <span class="checkbox-icon"></span>
                 J'ai lu et accepté les conditions d'utilisation.
@@ -141,7 +141,7 @@
       Copyright 2014 - 2022, GameOn Inc.
     </p>
   </footer>
-  <script src="./js/modal.js"></script>
+  <script src="./src/index.js"></script>
 </body>
 
 </html>
