--- a/starterOnly/index.html
+++ b/starterOnly/index.html
@@ -141,7 +141,7 @@
       Copyright 2014 - 2022, GameOn Inc.
     </p>
   </footer>
-  <script src="./js/modal.js"></script>
+  <script src="./src/modal.js"></script>
 </body>
 
 </html>
