--- a/index.html
+++ b/index.html
@@ -142,6 +142,7 @@
     </p>
   </footer>
   <script src="./src/index.js"></script>
+  <script src="./src/validation.js"></script>
 </body>
 
 </html>
