--- a/public/index.html
+++ b/public/index.html
@@ -74,7 +74,7 @@
             <div class="formData">
               <label for="email">E-mail</label>
               <br>
-              <input class="text-control" type="email" id="email" name="email" />
+              <input class="text-control" type="text" id="email" name="email" />
               <br>
               <span class="error-msg"></span>
             </div>
@@ -87,7 +87,7 @@
             </div>
             <div class="formData">
               <label for="quantity">À combien de tournois GameOn avez-vous déjà participé ?</label><br>
-              <input type="text" class="text-control" id="quantity" name="quantity" min="0" max="99">
+              <input type="text" class="text-control" id="quantity" name="quantity">
               <br>
               <span class="error-msg"></span>
             </div>
@@ -122,14 +122,14 @@
             </div>
             <!-- input checkbox -->
             <div class="formData">
-              <input class="checkbox-input" type="checkbox" id="checkbox1" />
+              <input class="checkbox-input" type="checkbox" id="checkbox1" name="checkbox1" />
               <label class="checkbox2-label" for="checkbox1" id="cgu">
                 <span class="checkbox-icon"></span>
                 J'ai lu et accepté les conditions d'utilisation.
               </label>
               <span class="error-msg"></span>
               <br>
-              <input class="checkbox-input" type="checkbox" id="checkbox2" />
+              <input class="checkbox-input" type="checkbox" id="checkbox2" name="checkbox2" />
               <label class="checkbox2-label" for="checkbox2">
                 <span class="checkbox-icon"></span>
                 Je souhaite être prévenu des prochains évènements.
